--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ importlib-resources==6.1.1
 ipykernel==6.29.2
 ipython==8.18.1
 itsdangerous==2.1.2
+gunicorn==19.7.1
 jedi==0.19.1
 Jinja2==3.1.3
 jupyter_client==8.6.0
