--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.6.0
 anyio==4.2.0
 asttokens==2.4.1
+attrs==23.2.0
 blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
@@ -13,23 +14,28 @@ emoji==2.10.1
 exceptiongroup==1.2.0
 executing==2.0.1
 fastapi==0.109.2
+fastjsonschema==2.20.0
 Flask==3.0.2
 fonttools==4.48.1
+Frozen-Flask==1.0.2
+gunicorn==21.2.0
 idna==3.6
 importlib-metadata==7.0.1
 importlib-resources==6.1.1
 ipykernel==6.29.2
 ipython==8.18.1
 itsdangerous==2.1.2
-gunicorn==19.7.1
 jedi==0.19.1
 Jinja2==3.1.3
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 jupyter_client==8.6.0
 jupyter_core==5.7.1
 kiwisolver==1.4.5
 MarkupSafe==2.1.5
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
+nbformat==5.10.4
 nest-asyncio==1.6.0
 numpy==1.26.4
 packaging==23.2
@@ -49,8 +55,11 @@ Pygments==2.17.2
 pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2024.1
+pywin32==306
 pyzmq==25.1.2
+referencing==0.35.1
 regex==2023.12.25
+rpds-py==0.19.0
 six==1.16.0
 sniffio==1.3.0
 stack-data==0.6.3
@@ -60,6 +69,7 @@ tornado==6.4
 traitlets==5.14.1
 typing_extensions==4.9.0
 tzdata==2024.1
+vboxapi==1.0
 wcwidth==0.2.13
 websocket-client==1.7.0
 Werkzeug==3.0.1
